<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaterialDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Main -->
    <string name="main_title">Material Style</string>
    <string name="main_setting">Setting</string>

    <!-- LButton -->
    <string name="lbutton_back">Back</string>
    <string name="lbutton_title">Material Button</string>
    <string name="lbutton_menu">This is a long menu</string>
    <string name="lbutton_sytem_style">System style</string>
    <string name="lbutton_enabled">Enabled</string>
    <string name="lbutton_disabled">Disabled</string>
    <string name="lbutton_wicth_background_color">With background color</string>
    <string name="lbutton_change_color">Change color dynamically</string>
    <string name="lbutton_tall">This is a tall button!</string>
    <string name="lbutton_toast_system_button">This is system style Button!</string>

    <!-- LImageButton -->
    <string name="limagebutton_title">Material ImageButton</string>
    <string name="limagebutton_toast_system_button">This is system style ImageButton!</string>

    <!-- LFrameLayout -->
    <string name="lframelayout_title">Material FrameLayout</string>
    <string name="lframelayout_toast_system_button">This is system style FrameLayout!</string>

    <!-- LPreference -->
    <string name="lpreference_title">Material Preference</string>
    <string name="lpreference_checkbox_title">Checkbox</string>
    <string name="lpreference_checkbox_summary">status:true</string>
    <string name="lpreference_normal_title">Normal</string>
    <string name="lpreference_normal_summary">this is normal!</string>
    <string name="lpreference_toast_normal_click">Click preference item!</string>

    <!-- LDrawer -->
    <string name="ldrawer_title">Material Drawer</string>
    <string name="ldrawer_item1">MenuItem One</string>
    <string name="ldrawer_item2">MenuItem Two</string>
    <string name="ldrawer_item3">MenuItem Three</string>
    <string name="ldrawer_item4">MenuItem Four</string>
    <string name="ldrawer_right_content">This is right DrawerLayout</string>
    <!-- LDialog -->
    <string name="ldialog_title">Material Dialog</string>
    <string name="ldialog_system">System Dialog</string>
    <string name="ldialog_normal">Normal Dialog</string>
    <string name="ldialog_normal_longmsg">Normal Dialog width long message</string>
    <string name="ldialog_list">List Dialog</string>
    <string name="ldialog_single_choice">Single choice Dialog</string>
     <!-- LTab -->
    <string name="ltab_title">Material TabIndicator</string>
    

</resources>