<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerbar_height"
        android:background="@color/headbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.lion.material.widget.LButton
            android:id="@+id/header_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/lbutton_back"
            material:widget_animColor="@color/color_anim_white"
            material:widget_type="left" />

        <TextView
            style="@style/headerbar_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbutton_title" />

        <com.lion.material.widget.LButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="100dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/lbutton_menu"
            material:widget_animColor="@color/color_anim_white"
            material:widget_type="right" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/lbutton_sytem_style"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.lion.material.widget.LButton
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbutton_enabled"
                android:textColor="#000000"
                android:textSize="15sp"
                material:widget_animColor="#1a000000"
                material:widget_background="@drawable/selecter_bg_pro_token_btn" />

            <com.lion.material.widget.LButton
                android:id="@+id/button3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/lbutton_wicth_background_color"
                android:textColor="#000000"
                android:textSize="20sp"
                material:widget_animColor="#ccffffff"
                material:widget_background="@drawable/icon_add" />

            <com.lion.material.widget.LButton
                android:id="@+id/button4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/lbutton_change_color"
                android:textColor="#000000"
                android:textSize="20sp"
                material:widget_animColor="#1a000000" />

            <com.lion.material.widget.LButton
                android:layout_width="60dp"
                android:layout_height="200dp"
                android:gravity="center"
                android:text="@string/hello_world"
                android:textColor="#000000"
                android:textSize="20sp"
                material:widget_animColor="#bbff2d6f" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>