<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/headerbar_height"
        android:background="@color/headbar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.lion.material.widget.LImageButton
            android:id="@+id/header_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/icon_header_back"
            android:text="@string/lbutton_back"
            material:widget_animColor="@color/color_anim_white"
            material:widget_type="left" />

        <TextView
            style="@style/headerbar_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lpreference_title" />

        <com.lion.material.widget.LSwitch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <com.lion.material.widget.PreferenceCheckBox
                android:id="@+id/lpreference_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                material:preference_checked="true"
                material:preference_show_divider="true"
                material:preference_summary="@string/lpreference_checkbox_summary"
                material:preference_title="@string/lpreference_checkbox_title" />

            <com.lion.material.widget.PreferenceNormal
                android:id="@+id/lpreference_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                material:preference_show_divider="true"
                material:preference_summary="@string/lpreference_normal_summary"
                material:preference_title="@string/lpreference_normal_title" />

            <com.lion.material.widget.LSwitch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <com.lion.material.widget.LSwitch
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>